# QT_ROS_FYP

open_manipulator/open_manipulator_description/launch/: check_urdf.launch
open_manipulator/open_manipulator_description/meshes/: base_link.STL  chain_link1.stl  chain_link_5_2.STL  cube_1.STL
open_manipulator/open_manipulator_description/urdf/: open_manipulator.gazebo.xacro  open_manipulator.transmission.xacro  open_manipulator.urdf.xacro  open_manipulator_2.gazebo.xacro  open_manipulator_2.transmission.xacro  open_manipulator_2.urdf.xacro  open_manipulator_robot_2.urdf.xacro
open_manipulator/open_manipulator_description/urdf/og/: open_manipulator.urdf.xacro
open_manipulator_controllers/: CMakeLists.txt  package.xml
open_manipulator_controllers/config/: gravity_compensation_controller2.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller2.yaml  joint_trajectory_controller_gazebo.yaml  joint_trajectory_controller_gazebo2.yaml
open_manipulator_controllers/include/meshes/: base_link.STL  base_link2.STL
open_manipulator_controllers/include/urdf/: Assem1_car.urdf
open_manipulator_controllers/launch/: gravity_trajectory_controller.launch  joint_trajectory_controller.launch  new_trajectory_controller.launch
open_manipulator_controllers/src/: new_trajectory.cpp  new_tutorial.cpp
open_manipulator_hw/: CMakeLists.txt
open_manipulator_hw/config/: hardware.yaml  hardware_2.yaml
open_manipulator_hw/include/open_manipulator_hw/: hardware_interface_2.h
open_manipulator_hw/launch/: open_manipulator_control.launch  open_manipulator_control_2.launch  open_manipulator_gazebo.launch
open_manipulator_hw/src/: hardware_interface.cpp  hardware_interface_2.cpp
open_manipulator_moveit_config/: package.xml
open_manipulator_moveit_config/config/: chomp_planning.yaml  fake_controllers.yaml  fake_controllers_2.yaml  joint_limits.yaml  joint_limits_2.yaml  new.rviz  open_manipulator.srdf  open_manipulator_2.srdf  ros_controllers.yaml  ros_controllers_2.yaml  ros_effort_controllers.yaml  ros_effort_controllers_2 .yaml
open_manipulator_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager_2.launch .xml  move_group.launch  moveit.rviz  open_manipulator_moveit_controller_manager_2.launch.xml  planning_context2.launch  trajectory_execution_2.launch.xml  update_move_group.launch  update_move_group2.launch
open_manipulator_simulations/open_manipulator_gazebo/: CMakeLists.txt  package.xml
open_manipulator_simulations/open_manipulator_gazebo/launch/: open_manipulator_gazebo.launch
open_manipulator_simulations/open_manipulator_gazebo/src/: pickable_cylinder.urdf.xacro  spawn_cylinder.cpp  spawn_cylinder.sdf
qt_ros_app_2/src/my_qt_ros_app/include/my_qt_ros_app/: carthread.h  gamedisplay.h  graphicsscene.h  mainwindow.h  messageboard.h  radiobuttonlikewidget.h  robotmanipulator.h  twoplayerboard.h
